# Vox_Amelior

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  LICENSE  Makefile  README.md  SECURITY.md  colab_gpu_offload.ipynb  cookies.txt  gemma.md  nemo  package-lock.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements.txt  setup_colab.ipynb  start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
EvenDemoApp-main/: ATTRIBUTION.md  CHANGELOG.md  README.md  SETUP_GUIDE.md  VISION_MODE_README.md  pubspec.yaml
database/: call_center_schema.sql  call_qa_schema.sql  init-db.sh  tenant_schema.sql
docker/: .shared_hash  Dockerfile  Dockerfile.api  Dockerfile.dev  Dockerfile.emotion  Dockerfile.gateway  Dockerfile.gemma  Dockerfile.gemma-vllm  Dockerfile.insights  Dockerfile.ml  Dockerfile.n8n  Dockerfile.nginx  Dockerfile.production-3stage  Dockerfile.queue  Dockerfile.quicktest  Dockerfile.rag  Dockerfile.test  Dockerfile.transcription  Dockerfile.ubuntu22test  docker-compose.cluster.yml  docker-compose.dev.yml  docker-compose.light.yml  docker-compose.remote.yml  docker-compose.yml  init_postgres.sql  log_viewer.out  monitor_build.sh  simulated_email_db.sql  start_services.sh
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  COLAB_README.md  COMPREHENSIVE_FEATURE_INVENTORY.md  CORS_SECURITY_FIX.md  DEVELOPER_GUIDE.md  EMAIL_GEMMA_INTEGRATION.md  GEMMA_ARCHITECTURE_AND_FIX.md  Gemma_analysis.md  How_To_Implement_APIS.md  SLO.md  SPEAKER_ISOLATION.md  api.md  diarize.md  diarizer.md  engines.md  gemma-implementation.md  gpu_coordinator_explanation.md  multi-computer-setup.md  n8n-workflows.md  nexus_ml_service_analysis.md  remote-deployment.md  threat_model.md
frontend/: README.md  about.html  admin_qa.html  all_engines_activity_log_demo.html  analysis.html  analytics.html  automation.html  banking.html  chat.html  chatbot.html  database_analysis.html  databases.html  dev_auto_login.html  email.html  emotions.html  financial-dashboard.html  gemma.html  gemma_data.html  gmail.html  graph_preview_static.html  index.html  knowledge.html  login.html  meetings.html  memories.html  mirror_gemma.html  ml_dashboard.html  nexus.html  patterns.html  personalization.html  predictions-modular.html  predictions.html  premium_engine_test.html  quick_test.html  salesforce.html  search.html  settings.html  speakers.html  test-email-gemma-debug.html  transcription_estimator.html  (+1 more)
k8s/: README.md
mobile-app/: .env.example  .gitignore  ATTRIBUTION.md  CHANGELOG.md  README.md  SETUP_GUIDE.md  VISION_MODE_README.md  pubspec.yaml
shared/: __init__.py  advanced_memory_service.py  config.py  constants.py  db_adapter.py  emotion_analyzer.py  errors.py  gemma_context_analyzer.py  health.py  magic_word_guide.md  model_config.py  nfs_setup.sh  pyproject.toml  setup_server_wowlan.sh  wake_device.py
shared/ai/: __init__.py  guardrails.py  model_registry.py  prompts.py
shared/analysis/: __init__.py  fallback_store.py
shared/analytics/: __init__.py  engine.py  vocab.py
shared/audit/: __init__.py
shared/auth/: __init__.py  auth_manager.py  permissions.py  rbac.py  routes.py  scim_store.py
shared/automation/: __init__.py  workflow_engine.py
shared/clients/: __init__.py  base.py
shared/clients/connectors/: __init__.py  azure_blob.py  base.py  csv.py  gcs.py  pdf.py  postgres.py  s3.py  snowflake.py
shared/compliance/: __init__.py  evidence_collector.py  policy_engine.py  soc2_logger.py
shared/crypto/: __init__.py  db_encryption.py  fips_wrapper.py  hsm_provider.py  key_management.py  key_rotation.py
shared/gemma_chat/: __init__.py  conversation_utils.py  router.py
shared/gpu/: __init__.py  client.py  listener.py  protocol.py  state.py
shared/logging/: __init__.py  safe_logging.py  structured.py
shared/ops/: __init__.py  backup.py  disaster_recovery.py  secure_backup.py
shared/security/: __init__.py  adaptive_rate_limit.py  anomaly_detector.py  audit_events.py  audit_logger.py  claims_middleware.py  classification.py  content_sanitizer.py  csp_validator.py  data_classification.py  file_validator.py  guardrails.py  headers.py  lockout.py  mfa.py  pii_detector.py  redis_rate_limit.py  secrets.py  secrets_manager.py  secure_upload.py  service_auth.py  spiffe_identity.py  startup_checks.py  tenant_middleware.py  validation.py  workload_identity.py  xss.py
shared/security/waf/: __init__.py  engine.py  rules.py
shared/storage/: cache.py  encryption.py  transcript_store.py
shared/telemetry/: __init__.py  cost_tracker.py  metrics.py  slo_tracker.py
shared/utils/: chunking.py
(+814 files in other folders)
