[project]
name = "nemo-server"
version = "1.0.0"
description = "Privacy-first cognitive AI platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Pruitt Colon", email = "contact@pruittcolon.dev"}
]
keywords = ["ai", "llm", "transcription", "ml", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/pruittcolon/Nemo_Server"
Documentation = "https://github.com/pruittcolon/Nemo_Server#readme"
Repository = "https://github.com/pruittcolon/Nemo_Server.git"

# ============================================================
# Ruff Configuration (2025: Replaces black + flake8 + isort)
# ============================================================
[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "node_modules",
    "frontend",
    "mobile-app",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert (ok in tests)
    "S104",   # binding to all interfaces
    "S108",   # hardcoded temp file
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]  # Allow asserts and hardcoded passwords in tests
"**/test_*.py" = ["S101", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["shared", "services"]
combine-as-imports = true

# ============================================================
# Bandit Configuration (Security Linting)
# ============================================================
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B104"]  # Skip assert and bind-all-interfaces

# ============================================================
# pytest Configuration
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (requires Docker)",
    "e2e: End-to-end tests (full stack)",
    "gpu: Tests requiring GPU",
    "slow: Tests taking >5 seconds",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================
# Coverage Configuration
# ============================================================
[tool.coverage.run]
branch = true
source = ["services", "shared"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 80

# ============================================================
# MyPy Configuration
# ============================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
]
